<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.sophisticatedapps.archiving</groupId>
  <artifactId>document-archiver</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>DocumentArchiver</name>
  <url>https://github.com/Document-Archiver/com.sophisticatedapps.archiving.document-archiver</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>9</maven.compiler.source>
    <maven.compiler.target>9</maven.compiler.target>
  </properties>

  <repositories>
    <repository>
      <id>mvnrepository.com</id>
      <url>https://mvnrepository.com</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <profiles>
    <profile>
      <id>native-environment</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <dependencies>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-controls</artifactId>
          <version>15.0.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-web -->
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-web</artifactId>
          <version>15.0.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-fxml</artifactId>
          <version>15.0.1</version>
        </dependency>
      </dependencies>
    </profile>

    <profile>
      <id>mac-environment</id>
      <properties>
        <javafx.platform>mac</javafx.platform>
      </properties>
      <dependencies>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-controls</artifactId>
          <version>15.0.1</version>
          <classifier>mac</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-controls</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-graphics</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-graphics</artifactId>
          <version>15.0.1</version>
          <classifier>mac</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-graphics</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-base</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-base</artifactId>
          <version>15.0.1</version>
          <classifier>mac</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-base</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-web</artifactId>
          <version>15.0.1</version>
          <classifier>mac</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-web</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-controls</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-media</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-media</artifactId>
          <version>15.0.1</version>
          <classifier>mac</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-media</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-graphics</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-fxml</artifactId>
          <version>15.0.1</version>
          <classifier>mac</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-fxml</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-controls</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
      </dependencies>
    </profile>

    <profile>
      <id>linux-environment</id>
      <properties>
        <javafx.platform>linux</javafx.platform>
      </properties>
      <dependencies>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-controls</artifactId>
          <version>15.0.1</version>
          <classifier>linux</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-controls</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-graphics</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-graphics</artifactId>
          <version>15.0.1</version>
          <classifier>linux</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-graphics</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-base</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-base</artifactId>
          <version>15.0.1</version>
          <classifier>linux</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-base</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-web</artifactId>
          <version>15.0.1</version>
          <classifier>linux</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-web</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-controls</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-media</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-media</artifactId>
          <version>15.0.1</version>
          <classifier>linux</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-media</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-graphics</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-fxml</artifactId>
          <version>15.0.1</version>
          <classifier>linux</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-fxml</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-controls</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
      </dependencies>
    </profile>

    <profile>
      <id>win-environment</id>
      <properties>
        <javafx.platform>win</javafx.platform>
      </properties>
      <dependencies>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-controls</artifactId>
          <version>15.0.1</version>
          <classifier>win</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-controls</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-graphics</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-graphics</artifactId>
          <version>15.0.1</version>
          <classifier>win</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-graphics</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-base</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-base</artifactId>
          <version>15.0.1</version>
          <classifier>win</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-base</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-web</artifactId>
          <version>15.0.1</version>
          <classifier>win</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-web</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-controls</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-media</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-media</artifactId>
          <version>15.0.1</version>
          <classifier>win</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-media</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-graphics</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
        <dependency>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-fxml</artifactId>
          <version>15.0.1</version>
          <classifier>win</classifier>
          <exclusions>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-fxml</artifactId>
            </exclusion>
            <exclusion>
              <groupId>org.openjfx</groupId>
              <artifactId>javafx-controls</artifactId>
            </exclusion>
          </exclusions>
        </dependency>
      </dependencies>
    </profile>
  </profiles>

  <dependencies>
    <dependency>
      <groupId>com.github.Dansoftowner</groupId>
      <artifactId>PDFViewerFX</artifactId>
      <version>0.7</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-imaging -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-imaging</artifactId>
      <version>1.0-alpha2</version>
    </dependency>

    <!-- TestFX -->
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-core</artifactId>
      <version>4.0.16-alpha</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-junit5</artifactId>
      <version>4.0.16-alpha</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.13.2</version>
      <scope>test</scope>
    </dependency>
    <!--
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>openjfx-monocle</artifactId>
      <version>jdk-11+26</version>
      <scope>test</scope>
    </dependency>
    -->

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.5.2</version>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>3.8.0</version>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.awaitility/awaitility -->
    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <version>4.0.3</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/java</directory>
        <includes>
          <include>**/*.fxml</include>
        </includes>
      </resource>
      <resource>
        <directory>src/test/java</directory>
        <includes>
          <include>**/*.fxml</include>
        </includes>
      </resource>
      <resource>
        <directory>${basedir}/src/main/resources</directory>
      </resource>
      <resource>
        <directory>${basedir}/src/test/resources</directory>
      </resource>
    </resources>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
          <configuration>
            <argLine>
              --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
            </argLine>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
		<plugin>
      	  <artifactId>maven-assembly-plugin</artifactId>
          <configuration>
            <archive>
              <manifest>
                <mainClass>com.sophisticatedapps.archiving.documentarchiver.Launcher</mainClass>
              </manifest>
            </archive>
            <descriptorRefs>
              <descriptorRef>jar-with-dependencies</descriptorRef>
            </descriptorRefs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.1.2</version>
          <executions>
            <execution>
              <id>copy-dependencies</id>
              <phase>package</phase>
              <goals>
                <goal>copy-dependencies</goal>
              </goals>
              <configuration>
                <outputDirectory>${project.build.directory}/theDependencies</outputDirectory>
                <overWriteReleases>false</overWriteReleases>
                <overWriteSnapshots>false</overWriteSnapshots>
                <overWriteIfNewer>true</overWriteIfNewer>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <!-- https://github.com/moditect/moditect -->
        <!--
        <plugin>
          <groupId>org.moditect</groupId>
          <artifactId>moditect-maven-plugin</artifactId>
          <version>1.0.0.RC1</version>
          <executions>
            <execution>
              <id>add-module-infos</id>
              <phase>generate-resources</phase>
              <goals>
                <goal>add-module-info</goal>
              </goals>
              <configuration>
                <outputDirectory>${project.build.directory}/modules</outputDirectory>
                <modules>
                  <module>
                    <artifact>
                      <groupId>com.github.Dansoftowner</groupId>
                      <artifactId>PDFViewerFX</artifactId>
                      <version>0.7</version>
                    </artifact>
                    <moduleInfoSource>
                      module PDFViewerFX {
                        requires jdk.jsobject;
                        exports com.dansoftware.pdfdisplayer;
                      }
                    </moduleInfoSource>
                  </module>
                </modules>
              </configuration>
            </execution>
          </executions>
        </plugin>
        -->
        <!-- https://github.com/openjfx/javafx-maven-plugin -->
        <plugin>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-maven-plugin</artifactId>
          <version>0.0.5</version>
          <configuration>
            <!--
            <jlinkExecutable>/usr/local/java/jdk11/bin/jlink</jlinkExecutable>
            -->
            <mainClass>com.sophisticatedapps.archiving.documentarchiver.App</mainClass>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eluder.coveralls</groupId>
          <artifactId>coveralls-maven-plugin</artifactId>
          <version>4.3.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
